--- a/20230105/carousel_slide_responsive.html
+++ b/20230105/carousel_slide_responsive.html
@@ -57,7 +57,7 @@
     사용 예)
     function 함수명(){
       let box = document.getElementById("wrap");
-      let txt = "padding 포함 높이: " + wrap.clientHeight + "px<br>";
+      let txt = "padding 포함 높이: " + wrap.clientHeight + "px";
       txt += "padding 포함 너비: " + wrap.clientWidth + "px";  
       document.getElementById("demo").innerHTML = txt;
     }
