자바스크립트 쿠팡 실습예제 추가

--- a/20230105/carousel_slide_responsive.html
+++ b/20230105/carousel_slide_responsive.html
@@ -65,7 +65,7 @@
 
   <script>    
     //변수선언
-    const slide_w = document.querySelector('.slide-wrapper')
+    const slide_w = document.querySelector('.slide-wrapper');
     const slide = document.querySelector('.slide');
     const slide_img = document.querySelectorAll('.slide li');
     const l_btn = document.querySelector('.prev');
