--- a/index.html
+++ b/index.html
@@ -61,38 +61,12 @@
 
       <main>
         <h2>기초부터 확실하게! 페이지 내용 전달을 위한 HTML5</h2>
-        <section class="border01">
-          <dl>
-            <dt class="bgcolor01">1일차 - html5와 기본문법, 시멘틱구조 태그</dt>
-            <dd><a href="./1129/html5.html" title="html5기본태그">html5기본 문법</a></dd>
-            <dd><a href="./1129/symentic.html" title="시멘틱구조 태그">시멘틱구조 태그</a></dd>
-          </dl>
-
-          <dl>
-            <dt class="bgcolor01">2일차 - 제목, 문단, 인용문, 프리, 글자관련, 목록, 이미지</dt>
-            <dd><a href="./1130/01_heading.html" title="제목태그">제목태그</a></dd>
-            <dd><a href="./1130/02_paragraph.html" title="문단태그">문단태그</a></dd>
-            <dd><a href="./1130/03_blockquote.html" title="인용문태그">인용문태그</a></dd>
-            <dd><a href="./1130/04_pre.html" title="프리태그">프리태그</a></dd>
-            <dd><a href="./1130/05_txt.html" title="글자태그">글자관련태그</a></dd>
-            <dd><a href="./1130/06_list.html" title="목록태그">목록태그</a></dd>
-            <dd><a href="./1130/07_img.html" title="이미지태그">이미지태그</a></dd>
-            <dd><a href="./1130/exec01.html" title="서른의 연예">실습예제-서른의 연예</a></dd>
-          </dl>
-        </section>
         <h2>자바스크립트</h2>
         <section class="border01">
           <dl>
-            <dt class="bgcolor01">2일차 - 제목, 문단, 인용문, 프리, 글자관련, 목록, 이미지</dt>
-            <dd><a href="./1130/01_heading.html" title="제목태그">제목태그</a></dd>
-            <dd><a href="./1130/02_paragraph.html" title="문단태그">문단태그</a></dd>
-            <dd><a href="./1130/03_blockquote.html" title="인용문태그">인용문태그</a></dd>
-            <dd><a href="./1130/04_pre.html" title="프리태그">프리태그</a></dd>
-            <dd><a href="./1130/05_txt.html" title="글자태그">글자관련태그</a></dd>
-            <dd><a href="./1130/06_list.html" title="목록태그">목록태그</a></dd>
-            <dd><a href="./1130/07_img.html" title="이미지태그">이미지태그</a></dd>
-            <dd><a href="./1130/exec01.html" title="서른의 연예">실습예제-서른의 연예</a></dd>
-          </dl>
+            <dt class="bgcolor01">임시제목</dt>
+            <dd><a href="./1130/01_heading.html" title="임시제목">임시제목</a></dd>
+            <dd><a href="./1130/02_paragraph.html" title="임시제목">임시제목</a></dd>
         </section>
         <h2>제이쿼리</h2>
         <section class="border01">
@@ -102,12 +76,18 @@
             <dd><a href="./20230106/02_제이쿼리 선택자와 css메소드 활용하기.html" title="02_제이쿼리 선택자와 css메소드 활용하기">02_제이쿼리 선택자와 css메소드 활용하기</a></dd>
             <dd><a href="./20230106/exec/exec01.html" title="03_선택자 실습예쩨">03_선택자 실습예쩨</a></dd>
           </dl>
+          <dl>
+            <dt class="bgcolor01">2일차 - 제이쿼리 이벤트와 효과</dt>
+            <dd><a href="./20230109/01jquery_event.html" title="01_제이쿼리 이벤트">01_제이쿼리 이벤트</a></dd>
+            <dd><a href="./20230109/02jquery_effect.html" title="02_제이쿼리 효과">02_제이쿼리 효과</a></dd>
+            <dd><a href="./20230109/02jquery_effect.html" title="03_실습예제(쿠팡)">03_실습예제(쿠팡) 위와 같은 문서에서 진행</a></dd>
+          </dl>
         </section>
 
       </main>
 
       <footer>
-        <address>Copyright&copy;2022 HTML5/CSS3 학습페이지 allrights reserved.</address>
+        <address>Copyright&copy;2022 JAVASCRIPT 학습페이지 allrights reserved.</address>
       </footer>
     </body>
 </html>
