인덱스수정

--- a/index.html
+++ b/index.html
@@ -64,9 +64,74 @@
         <h2>자바스크립트</h2>
         <section class="border01">
           <dl>
-            <dt class="bgcolor01">임시제목</dt>
-            <dd><a href="./1130/01_heading.html" title="임시제목">임시제목</a></dd>
-            <dd><a href="./1130/02_paragraph.html" title="임시제목">임시제목</a></dd>
+            <dt class="bgcolor01">1일차 - 자바스크립트 소개와 문법</dt>
+            <dd><a href="./20221219/01javascript_start.html" title="01_자바스크립트 소개">01_자바스크립트 소개</a></dd>
+            <dd><a href="./20221219/02javascript_exec.html" title="02_데이터 타입(유형)">02_데이터 타입(유형)</a></dd>
+          </dl>
+          <dl>
+            <dt class="bgcolor01">2일차 - 자바스크립트 문서</dt>
+            <dd><a href="./20221221/01자바스크립트_문서출력방법.html" title="01_자바스크립트 문서출력방법">01_자바스크립트 문서출력방법</a></dd>
+            <dd><a href="./20221221/02자바스크립트_변수선언과_작성법.html" title="02_자바스크립트 변수선언과 작성법">02_자바스크립트 변수선언과 작성법</a></dd>
+          </dl>
+          <dl>
+            <dt class="bgcolor01">3일차 - 자바스크립트 데이터 타입</dt>
+            <dd><a href="./20221222/01변수복습.html" title="01_변수(varible)">01_변수(varible)</a></dd>
+            <dd><a href="./20221222/02데이터_타입.html" title="02_데이터 타입(유형)">02_데이터 타입(유형)</a></dd>
+          </dl>
+          <dl>
+            <dt class="bgcolor01">4일차 - 자바스크립트 계산기</dt>
+            <dd><a href="./20221223/01_operator.html" title="01_자바스크립트 연산자">01_자바스크립트 연산자</a></dd>
+            <dd><a href="./20221223/실습예제_연산자를_활용한_사칙연산_모바일_계산기.html" title="실습예제_연산자를 활용한 사칙연산 모바일 계산기">실습예제_연산자를 활용한 사칙연산 모바일 계산기</a></dd>
+          </dl>
+          <dl>
+            <dt class="bgcolor01">5일차 - 자바스크립트 제어문</dt>
+            <dd><a href="./20221226/01제어문(1_조건문).html" title="01_제어문(1_조건문)">01_제어문(1_조건문)</a></dd>
+            <dd><a href="./20221226/01제어문(2_선택문).html" title="01_제어문(2_선택문)">01_제어문(2_선택문)</a></dd>
+            <dd><a href="./20221226/01제어문(3_반복문).html" title="01_제어문(3_반복문)">01_제어문(3_반복문)</a></dd>
+          </dl>
+          <dl>
+            <dt class="bgcolor01">6일차 - 자바스크립트 함수</dt>
+            <dd><a href="./20221227/01_javascript_함수(function).html" title="01_javascript_함수(function)">01_javascript_함수(function)</a></dd>
+            <dd><a href="./20221227/exec01.html" title="실습예제 반복문을 활용한 자리배치도 만들기">실습예제 반복문을 활용한 자리배치도 만들기</a></dd>
+            <dd><a href="./20221227/exec02_banner.html" title="실습예제 함수를 활용하여 배너 구현하기">실습예제 함수를 활용하여 배너 구현하기</a></dd>
+          </dl>
+          <dl>
+            <dt class="bgcolor01">7일차 - 자바스크립트 함수 추가</dt>
+            <dd><a href="./20221229/01함수선언과 실행.html" title="01_함수의 실행과 선언">01_함수의 실행과 선언</a></dd>
+            <dd><a href="./20221229/02_함수를 활용하여 적정체중_비만도지수구하기.html" title="02_함수를 활용하여 적정체중_비만도 지수 구하기">02_함수를 활용하여 적정체중_비만도 지수 구하기</a></dd>
+            <dd><a href="./20221229/03_함수 표현식.html" title="03_함수 표현식">03_함수 표현식</a></dd>
+          </dl>
+          <dl>
+            <dt class="bgcolor01">8일차 - 자바스크립트 이벤트</dt>
+            <dd><a href="./20221230/01variable(변수)복습과 유의사항.html" title="01variable(변수)복습과 유의사항">01variable(변수)복습과 유의사항</a></dd>
+            <dd><a href="./20221230/02event(이벤트).html" title="02event(이벤트)">02event(이벤트)</a></dd>
+            <dd><a href="./20221230/20221230_exec01.html" title="탭메뉴_뉴스리스트">탭메뉴_뉴스리스트</a></dd>
+          </dl>
+          <dl>
+            <dt class="bgcolor01">9일차 - 자바스크립트 객체</dt>
+            <dd><a href="./20230102/01_객체(object).html" title="01_객체(object)">01_객체(object)</a></dd>
+            <dd><a href="./20230102/02_내장객체(object)_배열(array).html" title="02_내장객체(object)_배열(array)">02_내장객체(object)_배열(array)</a></dd>
+            <dd><a href="./20230102/03_내장객체(object)_Date.html" title="03_내장객체(object)_Date(날짜와 시간)">03_내장객체(object)_Date(날짜와 시간)</a></dd>
+            <dd><a href="./20230102/04_내장객체(object)_Math.html" title="04_내장객체(object)_Math">04_내장객체(object)_Math</a></dd>
+          </dl>
+          <dl>
+            <dt class="bgcolor01">10일차 - 자바스크립트 브라우저 객체</dt>
+            <dd><a href="./20230103/01_window_object.html" title="01_window(브라우저)_object(객체)">01_window(브라우저)_object(객체)</a></dd>
+            <dd><a href="./20230103/02_document_object.html" title="02_document(문서객체모델)_object">02_document(문서객체모델)_object</a></dd>
+          </dl>
+          <dl>
+            <dt class="bgcolor01">11일차 - 자바스크립트 객체모델</dt>
+            <dd><a href="./20230104/01_문서객체모델_내용수정_삽입하기.html" title="01_문서객체모델_내용수정_삽입하기">01_문서객체모델_내용수정_삽입하기</a></dd>
+            <dd><a href="./20230104/02_문서객체모델_속성(attribute)변경.html" title="02_문서객체모델_속성(attribute)변경">02_문서객체모델_속성(attribute)변경</a></dd>
+            <dd><a href="./20230104/03_문자열(string) 객체.html" title="03문자열(string) 객체">03문자열(string) 객체</a></dd>
+            <dd><a href="./20230104/exec02.html" title="exec02_문자열객체를 사용한 이미지 갤러리">실습예제_문자열객체를 사용한 이미지 갤러리</a></dd>
+          </dl>
+          <dl>
+            <dt class="bgcolor01">12일차 - 자바스크립트 슬라이드</dt>
+            <dd><a href="./20230104/실습과제2/exec03.html" title="네이버 영화 갤러리">네이버 영화 갤러리</a></dd>
+            <dd><a href="./20230105/carousel_slide.html" title="캐러셀_carousel_slide">캐러셀_carousel_slide</a></dd>
+            <dd><a href="./20230105/carousel_slide_responsive.html" title="캐러셀 슬라이드 구현하기-반응형">캐러셀 슬라이드 구현하기-반응형</a></dd>
+          </dl>
         </section>
         <h2>제이쿼리</h2>
         <section class="border01">
