--- a/index.html
+++ b/index.html
@@ -147,6 +147,16 @@
             <dd><a href="./20230109/02jquery_effect.html" title="02_제이쿼리 효과">02_제이쿼리 효과</a></dd>
             <dd><a href="./20230109/02jquery_effect.html" title="03_실습예제(쿠팡)">03_실습예제(쿠팡) 위와 같은 문서에서 진행</a></dd>
           </dl>
+          <dl>
+            <dt class="bgcolor01">3일차 - 제이쿼리 이벤트 Fade In Out</dt>
+            <dd><a href="./20230110/exec01/fadeIn_Out_slide.html" title="효과메서드를 활용한 fadeIn_Out_slide">효과메서드를 활용한 fadeIn_Out_slide</a></dd>
+            <dd><a href="./20230110/exec02/exec02.html" title="스타벅스 실습예제">스타벅스 실습예제</a></dd>
+          </dl>
+          <dl>
+            <dt class="bgcolor01">4일차 - 제이쿼리 animate</dt>
+            <dd><a href="./20230111/01_animate메서드.html" title="제이쿼리_01_animate메서드">제이쿼리_01_animate메서드</a></dd>
+            <dd><a href="./20230111/exec01.html" title="실습예제 제이쿼리 이미지 애니메이션">실습예제 제이쿼리 이미지 애니메이션</a></dd>
+          </dl>
         </section>
 
       </main>
