--- a/index.html
+++ b/index.html
@@ -157,6 +157,11 @@
             <dd><a href="./20230111/01_animate메서드.html" title="제이쿼리_01_animate메서드">제이쿼리_01_animate메서드</a></dd>
             <dd><a href="./20230111/exec01.html" title="실습예제 제이쿼리 이미지 애니메이션">실습예제 제이쿼리 이미지 애니메이션</a></dd>
           </dl>
+          <dl>
+            <dt class="bgcolor01">5일차 - 제이쿼리 슬라이더 퀵메뉴</dt>
+            <dd><a href="./20230112/index.html" title="제이쿼리 슬라이더">제이쿼리 슬라이더</a></dd>
+            <dd><a href="./20230112/01_exec01_quick_menu.html" title="제이쿼리 퀵메뉴">제이쿼리 퀵메뉴</a></dd>
+          </dl>
         </section>
 
       </main>
