--- a/20230202/exec01.html
+++ b/20230202/exec01.html
@@ -21,11 +21,6 @@
       border: 3px solid #333;
       position: relative;
     }
-    .img_tab::after {
-      content: '';
-      display: block;
-      padding-bottom: 59.6%;
-    }
     .img_tab > ul {
       display: grid;
       grid-template-columns: repeat(5, 1fr);
@@ -47,8 +42,7 @@
       height: 42px;
     }
     .img_tab .img_box {
-      position: absolute;
-      top: 73px;left: 0;
+      
     }
     .img_tab .img_box > img {width: 100%; display: block;}
   </style>
@@ -57,17 +51,19 @@
     $(function(){
       $('.img_tab > ul > li').click(function(){
         imgChange($(this));
-        // $('.img_tab').css('height', (79+Number($('.img_box > img').height()))+'px');
         return false;
       });
 
       function imgChange(el) {
         el.addClass('on').siblings().removeClass('on');
         $('.img_box > img').attr('src', './img/0'+(el.index()+1)+'.jpg');
-        $('.img_tab > ul > li').each(function(){
-          let ico_src = $(this).find('img').attr('src');
-          // $(this).find('img').attr('src', ico_src.substring(0, ico_src.lastIndexOf('_'))+($(this).hasClass('on') ? '_on.png' : '_off.png')); // substring, lastIndexOf 활용
-          $(this).find('img').attr('src', ($(this).hasClass('on') ? ico_src.replace('_off', '_on') : ico_src.replace('_on', '_off'))); // replace 활용
+        // $('.img_tab > ul > li').each(function(){
+        //   let ico_src = $(this).find('img').attr('src');
+        //   // $(this).find('img').attr('src', ico_src.substring(0, ico_src.lastIndexOf('_'))+($(this).hasClass('on') ? '_on.png' : '_off.png')); // substring, lastIndexOf 활용
+        //   $(this).find('img').attr('src', ($(this).hasClass('on') ? ico_src.replace('_off', '_on') : ico_src.replace('_on', '_off'))); // replace 활용
+        // });
+        $('.img_tab > ul > li').find('img').attr('src', function(i, attr){
+          $(this).attr('src', ($(this).parents('li').hasClass('on') ? attr.replace('_off', '_on') : attr.replace('_on', '_off'))); // replace 활용
         });
       }
     });
