--- a/20230203/index.html
+++ b/20230203/index.html
@@ -88,7 +88,7 @@
         <source src="./images/casper_te_18.webm" type="video/webm">
       </video>
 
-      <a href="#" title="아래로 이동" id="next_btn">아래로 이동</a>
+      <a href="#none" title="아래로 이동" id="next_btn">아래로 이동</a>
     </section>
 
     <section id="top3">
@@ -239,7 +239,7 @@
           캐스퍼를 체험해보세요.</p>
           <a href="test_drive.html" title="시승 신청" class="test_d_btn">
             시승 신청하기</a>
-          <br><a href="#" title="시승 신청조회" class="test_d_btn01">시승신청조회 &#x003E; </a>
+          <br><a href="#none" title="시승 신청조회" class="test_d_btn01">시승신청조회 &#x003E; </a>
           <p class="t_drive_p2">&middot; 시승 신청은 만 21세 이상 운전면허 소지자면 누구나 이용 가능합니다.</p>
       </article>
 
@@ -259,10 +259,10 @@
         <h2 class="m_title">이벤트&프로모션</h2>
         <p class="p01">다양한 이벤트 & 프로모션과 함께 캐스퍼를 만나보세요. </p>
         <ul>
-          <li><a href="#" title="slide"><img src="./images/PC_main_banner_car_insurance.jpg" alt=""></a></li>
-          <li><a href="#" title="slide"><img src="./images/PC_Main_HGenuineAccessories.jpg" alt=""></a></li>
-          <li><a href="#" title="slide"><img src="./images/pc_mainEventBanner.jpg" alt=""></a></li>
-          <li><a href="#" title="slide"><img src="./images/pc_mainEventBanner4.jpg" alt=""></a></li>
+          <li><a href="#none" title="slide"><img src="./images/PC_main_banner_car_insurance.jpg" alt=""></a></li>
+          <li><a href="#none" title="slide"><img src="./images/PC_Main_HGenuineAccessories.jpg" alt=""></a></li>
+          <li><a href="#none" title="slide"><img src="./images/pc_mainEventBanner.jpg" alt=""></a></li>
+          <li><a href="#none" title="slide"><img src="./images/pc_mainEventBanner4.jpg" alt=""></a></li>
         </ul>
         <a href="#none" class="fas fa-arrow-left"></a>
         <a href="#none" class="fas fa-arrow-right"></a>
@@ -275,15 +275,174 @@
       </article>
     </section>
 
+    <!-- 캐스퍼 구매 -->
     <section id="buy">
       <h2 class="m_title">캐스퍼 구매 안내</h2>
+      <p class="p01">구매 절차를 차근차근 알려드립니다.</p>
+
+      <h3>캐스퍼, <span class="t_color03">온라인</span>에서만 <span class="t_color03">구매</span>할 수 있습니다.</h3>
+
+      <ul>
+        <li>
+          <h4>쉬운 모델 선택</h4>
+          <img src="./images/icon_01.jpg" alt="">
+          <p class="p03">원하는 사양의 차량을 3D로 확인해 볼 수 있고,<br>데이터를 기반으로 나에게 맞는 캐스퍼를 추천받을 수 있습니다.</p>
+        </li>
+        <li>
+          <h4>편리한 구매</h4>
+          <img src="./images/icon_02.jpg" alt="">
+          <p class="p03">구매 시뮬레이션을 통해<br>나의 자금 사정에 맞는<br>구매 계획을 세울 수 있습니다.</p>
+        </li>
+        <li>
+          <h4>자유로운 취소/변경</h4>
+          <img src="./images/icon_03.jpg" alt="">
+          <p class="p03">계약 후에도 차량대금 결제 전이라면<br>자유롭게 원하는 사양으로 변경하고,<br>계약을 취소할 수 있습니다.(단, 특별주문차 제외)</p>
+        </li>
+        <li>
+          <h4>찾아가는 배송</h4>
+          <img src="./images/icon_04.jpg" alt="">
+          <p class="p03">집, 직장 등 내가 원하는 장소에서<br>
+          캐스퍼를 배송 받을 수 있습니다.</p>
+        </li>
+        <li>
+          <h4>진행 단계 알림</h4>
+          <img src="./images/icon_05.jpg" alt="">
+          <p class="p03">계약부터 차량 등록까지<br>
+          나의 계약 진행 상태를 메시지로 전송받을 수 있습니다.</p>
+        </li>
+        <li>
+          <h4>향상된 고객지원</h4>
+          <img src="./images/icon_06.jpg" alt="">
+          <p class="p03">밤 10시까지 캐스퍼 고객센터(080-500-6000)를 통해 문의사항을 해결할 수 있고, 현대자동차의<br>직영서비스센터와 블루핸즈도 이용할 수 있습니다.</p>
+        </li>
+      </ul>
+
+      <iframe src="https://www.youtube.com/embed/MQSGzDRejUM" title="YouTube video player" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
     </section>
 
+    <!-- 고객지원 -->
     <section id="cs">
       <h2 class="m_title">고객지원</h2>
+      <article class="clear">
+        <h3>ARS상담</h3>
+        <div class="ars_left">
+          <p class="cs_p">
+            <strong>캐스퍼 구매 상담</strong><br>
+            <a href="#" title="ARS 이용방법" class="link01">ARS 이용방법</a><br>
+            <span class="car">자동차</span>
+          </p>
+          <dl>
+            <dt>전화번호</dt>
+            <dd>080-500-6000</dd>
+            <dt>이용 시간</dt>
+            <dd>월&#x007E;
+              일요일 09:00 &#x007E; 22:00</dd>
+          </dl>
+        </div>
+        <div class="ars_right">
+          <p class="cs_p">
+            <strong>캐스퍼 정비/멤버쉽 상담</strong><br>
+            <a href="#" title="ARS 이용방법" class="link01">누르는 ARS 이용방법</a><br>
+            <a href="#" title="ARS 이용방법" class="link01">보이는 ARS 이용방법</a><br>
+            <span class="member">멤버쉽</span>
+          </p>
+          <dl>
+            <dt>전화번호</dt>
+            <dd>080-600-6000</dd>
+            <dt>이용 시간</dt>
+            <dd>월&#x007E;금요일 08:30 &#x007E; 19:00</dd>
+            <dd>토요일/공휴일 09:00 &#x007E; 17:00</dd>
+            <dd>일요일 09:00 &#x007E; 16:00</dd>
+          </dl>
+        </div>
+      </article>
+      <ul class="cs_etc">
+        <li>
+          <h3>1:1문의</h3>
+          <p>1:1 문의가 필요하신가요?<br>
+            <a href="#" title="나의 문의 내역" class="link01">나의 문의 내역</a>
+          </p>
+          <a href="#" title="1:1문의" class="btn01">1:1문의하기</a>
+        </li>
+        <li>
+          <h3>채팅 상담</h3>
+          <p>채팅 상담이 필요하신가요?</p>
+          <p>월~일요일 09:00 ~ 22:00</p>
+          <a href="#" title="채팅상담원 연결" class="btn01">채팅상담원 연결</a>
+        </li>
+        <li>
+          <h3>원격 지원</h3>
+          <p>상담원이 고객님과 같은 PC화면을 보면서 도움을 드립니다.</p>
+          <p>월 &#x007E; 일요일 09:00 ~ 22:00</p>
+          <a href="#" title="원격지원 시작하기" class="btn01">원격지원 시작하기</a>
+        </li>
+        <li>
+          <h3>마이현대 App</h3>
+          <p>현대자동차 맴버십과 차량 정비/점검, 카라이프 서비스까지 모두 마이현대로 관리하세요.</p>
+          <img src="./images/app.png" alt="현대앱"><br>
+          <a href="#" title="" class="link01">IOS</a>
+          &nbsp;&nbsp;&nbsp;
+          <a href="#" title="" class="link01">Android</a>
+        </li>
+      </ul>
+      <div class="ran_banner">
+        <img src="./images/banner01.jpg" alt="" id="eb">
+      </div>
     </section>
-  </main>
-
-  <footer></footer>
+  <footer>
+    <article>
+      <h1>
+        <a href="./index.html" title="메인으로 바로가기"><img src="./images/f_logo-hyundai.png" alt="현대배너"></a>
+      </h1>
+      <nav>
+        <ol>
+          <li><a href="#none" title="이용약관">이용약관</a></li>
+          <li><a href="#none" title="개인정보 처리방침">개인정보 처리방침</a></li>
+          <li><a href="#none" title="저작권안내">저작권안내</a></li>
+          <li><a href="#none" title="공동인증서 안내">공동인증서 안내</a></li>
+          <li><a href="#none" title="현대자동차 홈페이지">현대자동차 홈페이지</a></li>
+        </ol>
+      </nav>
+      <ul>
+        <li>
+          <dl>
+            <dt>사업자등록번호</dt>
+            <dd>101-81-09147</dd>
+          </dl>
+        </li>
+        <li>
+          <dl>
+            <dt>통신판매업신고번호</dt>
+            <dd>2002-01546</dd>
+          </dl>
+        </li>
+        <li>
+          <dl>
+            <dt>대표이사</dt>
+            <dd>장재훈 <a href="#none" title="사업자정보확인" class="emp_footer">사업자정보확인 &gt;</a></dd>
+          </dl>
+        </li>
+        <li>
+          <dl>
+            <dt>캐스퍼 고객센터</dt>
+            <dd>080-500-6000</dd>
+          </dl>
+        </li>
+        <li>
+          <dl>
+            <dt>주소</dt>
+            <dd>서울시 서초구 헌릉로 12</dd>
+          </dl>
+        </li>
+        <li>
+          <dl>
+            <dt>호스팅서비스 제공</dt>
+            <dd>현대오토에버(주)</dd>
+          </dl>
+        </li>
+      </ul>
+      <address>Copyright &copy; hyundai motor company, all rights reserved.</address>
+    </article>
+  </footer>
 </body>
 </html>
